_step-templates/validating-policy-v1-ready.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/steptemplate-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: StepTemplate
metadata:
  name: validating-policy-ready
spec:
  try:
  - assert:
      template: true
      resource:
        apiVersion: policies.kyverno.io/v1
        kind: ValidatingPolicy
        metadata:
          name: ($name)
        status:
          conditionStatus:
            (conditions[?type == 'WebhookConfigured']):
            - message: Webhook configured.
              reason: Succeeded
              status: "True"
              type: WebhookConfigured
            (conditions[?type == 'RBACPermissionsGranted']):
            - reason: Succeeded
              status: "True"
              type: RBACPermissionsGranted
            ready: true
